apps/forgejo/forgejo-helm-manifests.yaml
---
# Source: forgejo/templates/gitea/http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-http
  namespace: "default"
  labels:
    helm.sh/chart: forgejo-16.2.1
    app: forgejo
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/version: "14.0.3"
    version: "14.0.3"
  annotations:
    {}
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
---
# Source: forgejo/templates/gitea/ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: "default"
  labels:
    helm.sh/chart: forgejo-16.2.1
    app: forgejo
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/version: "14.0.3"
    version: "14.0.3"
  annotations:
    metallb.universe.tf/address-pool: private-pool
    metallb.universe.tf/allow-shared-ip: private-main
spec:
  type: LoadBalancer
  loadBalancerIP: 172.22.18.32
  ports:
  - name: ssh
    port: 22
    targetPort: ssh
    protocol: TCP
  selector:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
---
# Source: forgejo/templates/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: "default"
  annotations:
  labels:
    helm.sh/chart: forgejo-16.2.1
    app: forgejo
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/version: "14.0.3"
    version: "14.0.3"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo
      app.kubernetes.io/instance: forgejo
  template:
    metadata:
      annotations:
        checksum/config: 43f17cd89392f5be7f68f59e2e14445b0766c3e9b84c8c159b5ec0ac4be2b312
      labels:
        helm.sh/chart: forgejo-16.2.1
        app: forgejo
        app.kubernetes.io/name: forgejo
        app.kubernetes.io/instance: forgejo
        app.kubernetes.io/version: "14.0.3"
        version: "14.0.3"
    spec:
      
      securityContext:
        fsGroup: 2550
      terminationGracePeriodSeconds: 60
      containers:
        - name: forgejo
          image: "code.forgejo.org/forgejo/forgejo:14.0.3-rootless"
          imagePullPolicy: IfNotPresent
          ports:
            - name: ssh
              containerPort: 2222
            - name: http
              containerPort: 3000
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            {}
          securityContext:
            runAsGroup: 2550
            runAsNonRoot: true
            runAsUser: 2550
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: data
              mountPath: /data
            
      volumes:
        - name: init
          secret:
            secretName: forgejo-init
            defaultMode: 110
        - name: config
          secret:
            secretName: forgejo
            defaultMode: 110
        - name: inline-config-sources
          secret:
            secretName: forgejo-inline-config
        - name: temp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data
---
# Source: forgejo/templates/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: "default"
  labels:
    helm.sh/chart: forgejo-16.2.1
    app: forgejo
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/version: "14.0.3"
    version: "14.0.3"
  annotations:
      cert-manager.io/cluster-issuer: "cluster-ca"
spec:
  ingressClassName: haproxy-private
  tls:
    - hosts:
        - "forgejo.k8s"
      secretName: forgejo-tls
  rules:
    - host: "forgejo.k8s"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-http
                port:
                  name: http
